--- a/sdk/storage/storage-internal-avro/package.json
+++ b/sdk/storage/storage-internal-avro/package.json
@@ -18,34 +18,25 @@
     "azure",
     "cloud"
   ],
-  "browser": {
-    "./dist-esm/storage-internal-avro/src/index.js": "./dist-esm/storage-internal-avro/src/index.browser.js",
-    "./dist-esm/storage-internal-avro/src/utils/utils.node.js": "./dist-esm/storage-internal-avro/src/utils/utils.browser.js",
-    "./dist-esm/storage-internal-avro/test/utils/index.js": "./dist-esm/storage-internal-avro/test/utils/index.browser.js",
-    "fs": false,
-    "os": false,
-    "process": false
-  },
+  "browser": "./dist/browser/index.js",
   "types": "./types/latest/storage-internal-avro.d.ts",
   "engines": {
     "node": ">=18.0.0"
   },
   "files": [
     "dist/",
-    "dist-esm/src/",
-    "types/latest",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:es6 && dev-tool run bundle && dev-tool run extract-api",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:es6": "tsc -p tsconfig.json",
     "build:samples": "echo Skipped.",
     "build:test": "npm run build:es6 && dev-tool run bundle",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-* types temp statistics.html coverage coverage-browser .nyc_output *.tgz *.log test*.xml TEST*.xml",
     "docs": "echo Skipped.",
-    "extract-api": "tsc -p . && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
     "integration-test:browser": "karma start --single-run",
@@ -57,8 +48,8 @@
     "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser",
     "test:node": "npm run clean && npm run build:test && npm run unit-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "karma start --single-run",
-    "unit-test:node": "dev-tool run test:node-ts-input --no-test-proxy",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
   "dependencies": {
@@ -67,31 +58,35 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
-    "@types/chai": "^4.1.6",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
-    "chai": "^4.2.0",
+    "@vitest/browser": "^2.1.5",
+    "@vitest/coverage-istanbul": "^2.1.5",
     "dotenv": "^16.0.0",
     "es6-promise": "^4.2.5",
     "eslint": "^9.9.0",
     "inherits": "^2.0.3",
-    "karma": "^6.2.0",
-    "karma-chrome-launcher": "^3.0.0",
-    "karma-coverage": "^2.0.0",
-    "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.8",
-    "mocha": "^10.0.0",
-    "nyc": "^17.0.0",
-    "puppeteer": "^23.0.2",
-    "source-map-support": "^0.5.9",
-    "ts-node": "^10.0.0",
+    "playwright": "^1.48.2",
     "typescript": "~5.6.2",
-    "util": "^0.12.1"
+    "util": "^0.12.1",
+    "vitest": "^2.1.5"
+  },
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
   }
 }
