--- a/sdk/maps/maps-route-rest/package.json
+++ b/sdk/maps/maps-route-rest/package.json
@@ -86,11 +86,12 @@
   "dependencies": {
     "@azure-rest/core-client": "^1.0.0",
     "@azure/core-auth": "^1.3.0",
-    "@azure/core-lro": "^2.2.0",
+    "@azure/core-lro": "^3.1.0",
     "@azure/core-rest-pipeline": "^1.8.0",
     "@azure/logger": "^1.0.0",
     "@azure/maps-common": "1.0.0-beta.2",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.0",
+    "@azure/abort-controller": "^2.1.2"
   },
   "devDependencies": {
     "@azure-tools/test-credential": "^1.0.0",
