--- a/sdk/cosmosdb/cosmos/tsconfig.strict.json
+++ b/sdk/cosmosdb/cosmos/tsconfig.strict.json
@@ -165,6 +165,7 @@
     "test/internal/unit/inMemoryCollectionRoutingMap.spec.ts",
     "test/internal/unit/platform.spec.ts",
     "test/internal/unit/sasToken.spec.ts",
+    "test/internal/unit/hybridExecutionContext.spec.ts",
     "test/internal/unit/sessionContainer.spec.ts",
     "test/internal/unit/changeFeed/*.spec.ts",
     "test/public/common/MockQueryIterator.ts",
@@ -229,7 +230,7 @@
     "test/public/integration/nonStreamingOrderBy/nonStreamingDistinctOrderBy.spec.ts",
     "test/public/integration/client.retry.spec.ts",
     "test/public/integration/fullTextSearch.spec.ts",
-    "test/public/integration/text-3properties-1536dimensions-100documents.ts",
+    "test/public/integration/text-3properties-1536dimensions-100documents.json",
     "test/public/functional/NonStreamingQueryPolicy.spec.ts",
     "test/public/functional/computedProperties.spec.ts",
     "test/internal/unit/utils/nonStreamingOrderByPriorityQueue.spec.ts",
