--- a/sdk/template/template-dpg/package.json
+++ b/sdk/template/template-dpg/package.json
@@ -3,26 +3,68 @@
   "version": "1.0.0-beta.1",
   "description": "Widget Service",
   "sdk-type": "client",
-  "main": "dist/index.js",
-  "module": "dist-esm/src/index.js",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
   "type": "module",
   "exports": {
+    "./package.json": "./package.json",
     ".": {
-      "types": "./types/src/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist-esm/src/index.js"
+      "browser": {
+        "types": "./dist/browser/index.d.ts",
+        "default": "./dist/browser/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/index.d.ts",
+        "default": "./dist/react-native/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
     },
     "./api": {
-      "types": "./types/src/api/index.d.ts",
-      "import": "./dist-esm/src/api/index.js"
+      "browser": {
+        "types": "./dist/browser/api/index.d.ts",
+        "default": "./dist/browser/api/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/api/index.d.ts",
+        "default": "./dist/react-native/api/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/api/index.d.ts",
+        "default": "./dist/esm/api/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/api/index.d.ts",
+        "default": "./dist/commonjs/api/index.js"
+      }
     },
     "./rest": {
-      "types": "./types/src/rest/index.d.ts",
-      "import": "./dist-esm/src/rest/index.js"
+      "browser": {
+        "types": "./dist/browser/rest/index.d.ts",
+        "default": "./dist/browser/rest/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/rest/index.d.ts",
+        "default": "./dist/react-native/rest/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/rest/index.d.ts",
+        "default": "./dist/esm/rest/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/rest/index.d.ts",
+        "default": "./dist/commonjs/rest/index.js"
+      }
     }
   },
   "//metadata": {},
-  "types": "types/latest/template-dpg.d.ts",
+  "types": "./dist/commonjs/index.d.ts",
   "scripts": {
     "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:output": "node scripts/renameOutput.mjs",
@@ -37,8 +79,8 @@
     "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"sources/customizations/**/*.ts\" \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
-    "integration-test:browser": "dev-tool run build-package && dev-tool run bundle && dev-tool run test:browser",
-    "integration-test:node": "dev-tool run test:node-js-input -- --timeout 5000000 'dist-esm/test/**/*.spec.js'",
+    "integration-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "integration-test:node": "dev-tool run test:vitest",
     "lint": "eslint README.md package.json api-extractor.json src test",
     "lint:fix": "eslint README.md package.json api-extractor.json src test --fix --fix-type [problem,suggestion]",
     "pack": "npm pack 2>&1",
@@ -83,19 +125,17 @@
     "@vitest/coverage-istanbul": "^2.1.5",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
-    "karma-edge-launcher": "^0.4.2",
     "playwright": "^1.49.0",
     "typescript": "~5.6.2",
-    "util": "^0.12.4",
     "vitest": "^2.1.5"
   },
   "dependencies": {
-    "@azure-rest/core-client": "^1.1.2",
-    "@azure/core-auth": "^1.4.1",
-    "@azure/core-rest-pipeline": "^1.8.1",
-    "@azure/core-util": "^1.1.0",
-    "@azure/logger": "^1.0.3",
-    "tslib": "^2.4.0"
+    "@azure-rest/core-client": "^2.3.1",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-rest-pipeline": "^1.18.0",
+    "@azure/core-util": "^1.11.0",
+    "@azure/logger": "^1.1.4",
+    "tslib": "^2.8.1"
   },
   "tshy": {
     "exports": {
