--- a/sdk/web-pubsub/web-pubsub/package.json
+++ b/sdk/web-pubsub/web-pubsub/package.json
@@ -3,14 +3,13 @@
   "version": "1.1.4",
   "description": "Azure client library for Azure Web PubSub",
   "sdk-type": "client",
-  "main": "dist/index.js",
-  "module": "dist-esm/src/index.js",
-  "types": "types/web-pubsub.d.ts",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/commonjs/index.d.ts",
   "scripts": {
     "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:samples": "echo Obsolete.",
-    "build:test": "dev-tool run build-package && dev-tool run bundle --browser-test=false",
-    "bundle": "dev-tool run bundle --browser-test=false",
+    "build:test": "echo Obsolete.",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-esm test-dist temp types *.tgz *.log",
     "execute:samples": "dev-tool samples run samples-dev",
@@ -19,15 +18,15 @@
     "generate:client": "autorest --typescript ./swagger/README.md",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
     "integration-test:browser": "echo skipped",
-    "integration-test:node": "dev-tool run test:node-js-input -- --timeout 5000000 'dist-esm/test/**/*.spec.js'",
-    "lint": "eslint package.json api-extractor.json README.md src test",
-    "lint:fix": "eslint package.json api-extractor.json README.md src test --fix --fix-type [problem,suggestion]",
+    "integration-test:node": "dev-tool run test:vitest",
+    "lint": "dev-tool run vendored eslint package.json api-extractor.json README.md src test",
+    "lint:fix": "dev-tool run vendored eslint package.json api-extractor.json README.md src test --fix --fix-type [problem,suggestion]",
     "pack": "npm pack 2>&1",
     "test": "npm run build:test && npm run unit-test && npm run integration-test",
     "test:browser": "echo skipped",
     "test:node": "npm run build:test && npm run unit-test:node && npm run integration-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "unit-test:browser": "echo skipped",
     "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
@@ -64,13 +63,13 @@
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/web-pubsub/web-pubsub/README.md",
   "sideEffects": false,
   "dependencies": {
-    "@azure/core-auth": "^1.3.0",
-    "@azure/core-client": "^1.0.0",
-    "@azure/core-rest-pipeline": "^1.1.0",
-    "@azure/core-tracing": "^1.0.0",
-    "@azure/logger": "^1.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "tslib": "^2.2.0"
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-client": "^1.9.2",
+    "@azure/core-rest-pipeline": "^1.18.0",
+    "@azure/core-tracing": "^1.2.0",
+    "@azure/logger": "^1.1.4",
+    "jsonwebtoken": "^9.0.2",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@azure-tools/test-credential": "^2.0.0",
@@ -78,9 +77,9 @@
     "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^18.0.0",
-    "@types/ws": "^8.2.0",
+    "@types/ws": "^8.5.13",
     "@vitest/browser": "^2.1.5",
     "@vitest/coverage-istanbul": "^2.1.5",
     "dotenv": "^16.0.0",
@@ -88,7 +87,7 @@
     "playwright": "^1.49.0",
     "typescript": "~5.6.2",
     "vitest": "^2.1.5",
-    "ws": "^8.2.0"
+    "ws": "^8.18.0"
   },
   "//sampleConfiguration": {
     "productName": "Azure Web PubSub",
@@ -109,11 +108,20 @@
       "esm",
       "commonjs"
     ],
-    "esmDialects": [
-      "browser",
-      "react-native"
-    ],
     "selfLink": false
   },
-  "browser": "./dist/browser/index.js"
+  "browser": "./dist/browser/index.js",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
+  }
 }
