[synapse] Move @azure/synapse-spark to ESM/vitest

--- a/sdk/synapse/synapse-spark/tsconfig.json
+++ b/sdk/synapse/synapse-spark/tsconfig.json
@@ -3,21 +3,19 @@
   "compilerOptions": {
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "rootDir": "."
+    "rootDir": ".",
+    "paths": {
+      "@azure/synapse-spark": ["./src/index.js"]
+    }
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.mts",
     "src/**/*.cts",
     "samples-dev/**/*.ts",
-    "test/**/*.ts"
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
   ],
-  "exclude": [
-    "node_modules",
-    "types",
-    "temp",
-    "browser",
-    "dist*",
-    "./dom-shims.d.ts"
-  ]
+  "exclude": ["node_modules", "types", "temp", "browser", "dist*", "./dom-shims.d.ts"]
 }
