--- a/sdk/synapse/synapse-artifacts/tsconfig.json
+++ b/sdk/synapse/synapse-artifacts/tsconfig.json
@@ -1,9 +1,23 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist-esm",
-    "declarationDir": "./types"
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"],
-  "exclude": ["node_modules", "types", "temp", "browser", "dist*", "./dom-shims.d.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "types",
+    "temp",
+    "browser",
+    "dist*",
+    "./dom-shims.d.ts"
+  ]
 }
