--- a/sdk/eventhub/event-hubs/tests.yml
+++ b/sdk/eventhub/event-hubs/tests.yml
@@ -13,3 +13,5 @@ extends:
           Location: 'usgovarizona'
         China:
           Location: 'chinaeast'
+      EnvVars:
+        AZURE_LOG_LEVEL: info
