[Identity] Precise Typechecking

--- a/sdk/identity/identity/package.json
+++ b/sdk/identity/identity/package.json
@@ -119,6 +119,7 @@
   },
   "type": "module",
   "tshy": {
+    "project": "./tsconfig.src.json",
     "exports": {
       "./package.json": "./package.json",
       ".": "./src/index.ts"
