[OpenAI] Fix browser tests

--- a/sdk/openai/openai/tsconfig.browser.config.json
+++ b/sdk/openai/openai/tsconfig.browser.config.json
@@ -4,6 +4,7 @@
   "exclude": ["./test/**/node/**/*.ts"],
   "compilerOptions": {
     "outDir": "./dist-test/browser",
-    "composite": true
+    "rootDir": ".",
+    "noEmit": false
   }
 }
