--- a/sdk/core/core-http/package.json
+++ b/sdk/core/core-http/package.json
@@ -135,7 +135,7 @@
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/logger-js": "^1.0.2",
-    "@azure/test-utils": "^1.0.0",
+    "@azure-tools/test-utils": "^1.0.0",
     "@microsoft/api-extractor": "^7.31.1",
     "@opentelemetry/api": "^1.4.0",
     "@types/chai": "^4.1.6",
