[purview] Migrate @azure-rest/purview-datamap to ESM/vitest

--- a/sdk/purview/purview-datamap-rest/tsconfig.json
+++ b/sdk/purview/purview-datamap-rest/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-rest/purview-datamap": [
-        "./src/index"
-      ]
+      "@azure-rest/purview-datamap": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
