Migration: Update package.json, tsconfig.json, and api-extractor.json

--- a/sdk/documenttranslator/ai-document-translator-rest/tsconfig.json
+++ b/sdk/documenttranslator/ai-document-translator-rest/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist-esm",
-    "declarationDir": "./types",
     "paths": {
-      "@azure-rest/ai-document-translator": ["./src/index"]
-    }
+      "@azure-rest/ai-document-translator": [
+        "./src/index"
+      ]
+    },
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "samples-dev/**/*.ts", "../documentTranslation.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts"
+  ]
 }
