[contentsafety] Migrate @azure-rest/ai-content-safety to ESM/vitest

--- a/sdk/contentsafety/ai-content-safety-rest/tsconfig.json
+++ b/sdk/contentsafety/ai-content-safety-rest/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "lib": ["es6", "dom"],
+    "lib": ["dom"],
     "paths": {
       "@azure-rest/ai-content-safety": ["./src/index"]
     },
@@ -9,5 +9,13 @@
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
+  ]
 }
