Migration: rushx format

--- a/sdk/anomalydetector/ai-anomaly-detector-rest/tsconfig.json
+++ b/sdk/anomalydetector/ai-anomaly-detector-rest/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-rest/ai-anomaly-detector": [
-        "./src/index"
-      ]
+      "@azure-rest/ai-anomaly-detector": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
