--- a/sdk/formrecognizer/ai-form-recognizer/tests.yml
+++ b/sdk/formrecognizer/ai-form-recognizer/tests.yml
@@ -15,8 +15,12 @@ extends:
     parameters:
       PackageName: "@azure/ai-form-recognizer"
       ServiceDirectory: formrecognizer
-      Location: "${{ parameters.Location }}"
-      EnvVars:
-        AZURE_CLIENT_ID: $(aad-azure-sdk-test-client-id)
-        AZURE_TENANT_ID: $(aad-azure-sdk-test-tenant-id)
-        AZURE_CLIENT_SECRET: $(aad-azure-sdk-test-client-secret)
+      TimeoutInMinutes: 120
+      SupportedClouds: "Public,UsGov,China"
+      CloudConfig:
+        Public:
+          Location: "${{ parameters.Location }}"
+        UsGov:
+          Location: "usgovvirginia"
+        China:
+          Location: "chinaeast2"
